--- a/ProjectWorkSpace/WebApp/WebContent/index.xhtml
+++ b/ProjectWorkSpace/WebApp/WebContent/index.xhtml
@@ -21,8 +21,8 @@
 			</div>
 			<!-- Tabs -->
 			<div class="mdl-layout__tab-bar mdl-js-ripple-effect is-casting-shadows">
-				<a href="#fixed-tab-1" class="mdl-layout__tab is-active">Tab 1</a>
-				<a href="#fixed-tab-2" class="mdl-layout__tab">Tab 2</a>
+				<a href="#fixed-tab-1" class="mdl-layout__tab is-active">Problems</a>
+				<a href="#fixed-tab-2" class="mdl-layout__tab">Add problem</a>
 				<a href="passiveDisplay.xhtml" class="mdl-layout__tab">Passive display</a>
 			</div>
 
