--- a/ProjectWorkSpace/WebApp/WebContent/TabContent/Tab1.xhtml
+++ b/ProjectWorkSpace/WebApp/WebContent/TabContent/Tab1.xhtml
@@ -3,30 +3,23 @@
     xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
     xmlns:ui="http://xmlns.jcp.org/jsf/facelets">	
-	<div class="mainDisplayArea">
-		<div class="content-grid mdl-grid mdl-grid--no-spacing">
-			<ui:repeat var="environment" value="#{TestBean.environments}">
-				<div class="content-column mdl-cell mdl-cell--3-col">
-					<center>
-			    		<h:outputLabel value="#{environment.name} [#{environment.version}]" /><br/>
-			    		<h:outputLabel value="#{environment.status}" />
-		    		</center>
-		    	</div>
-			</ui:repeat>	
-	
-			<ui:repeat var="problem" value="#{TestBean.problems}">
-				<div class="content-column mdl-cell mdl-cell--3-col">
-					<center>
-			    		<h:outputLabel value="#{problem.date}" /><br/>
-			    		<h:outputLabel value="#{problem.code}" />
-		    		</center>
-		    	</div>
-			</ui:repeat>	
-		</div>
-	</div>
-	<div class="messageSection">
-		<div style="margin: auto; margin-left: 20px; margin-top: 15px; height : 100%;">
-			<h:outputLabel class="message" value="#{TestBean.displayMessage}" />
-		</div>
+	<div class="mdl-grid">
+		<ui:repeat var="problem" value="#{TestBean.problems}">
+			<div class="mdl-cell mdl-cell--3-col" style="border: 0; background: rgba(255,0,0,  0);">
+				<div class="demo-card-square mdl-card mdl-shadow--2dp">
+				  <div class="mdl-card__title mdl-card--expand" style="background: #{problem.image} no-repeat #46B6AC; background-size: 100% 100%;">
+				    <h2 class="mdl-card__title-text">#{problem.code}</h2>
+				  </div>
+				  <div class="mdl-card__supporting-text">
+				    <h:outputText value="#{problem.description}" />
+				  </div>
+				  <div class="mdl-card__actions mdl-card--border">
+				    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+				      View Updates
+				    </a>
+				  </div>
+				</div>
+			</div>
+		</ui:repeat>	
 	</div>
 </ui:composition>
