--- a/ProjectWorkSpace/WebApp/WebContent/passiveDisplay.xhtml
+++ b/ProjectWorkSpace/WebApp/WebContent/passiveDisplay.xhtml
@@ -18,7 +18,7 @@
 			<ui:repeat var="environment" value="#{TestBean.environments}">
 				<div class="content-column mdl-cell mdl-cell--3-col">
 					<center>
-			    		<h:outputLabel value="#{environment.name} [#{environment.version}]" /><br/>
+			    		<h:outputLabel value="#{environment.name}" /><br/>
 			    		<h:outputLabel value="#{environment.status}" />
 		    		</center>
 		    	</div>
