--- a/ProjectWorkSpace/TestWebservice/WebContent/index.html
+++ b/ProjectWorkSpace/TestWebservice/WebContent/index.html
@@ -12,7 +12,7 @@
 	<div class="mainDisplayArea" ng-controller="EnvironmentsController">
 		<div class="content-grid mdl-grid mdl-grid--no-spacing">
 
-			<div class="content-column mdl-cell mdl-cell--3-col" ng-repeat="environment in environments">
+			<div class="content-column mdl-cell mdl-cell--3-col" ng-repeat="environment in environments" style="margin-left: 10px;">
 	    		<h4 style="font-size: 10px;">{{environment.Name}}</h4>
      			<p style="font-size: 5px;">{{environment.Status}}</p>
 	    	</div>
