fixed bug with test problem.

--- a/Abel, Henry - BA Problem/index.html
+++ b/Abel, Henry - BA Problem/index.html
@@ -39,7 +39,7 @@
 				date: "Test Date",
 				status: "Test Status",
 				environment:"Test Environment",
-				image:"/images/testimage.JPG",
+				image:"images/testimage.JPG",
 				checked: false}
 			];
 			
