changed "In Progress" status, to "Assigned."

--- a/Abel, Henry - BA Problem/index.html
+++ b/Abel, Henry - BA Problem/index.html
@@ -18,7 +18,7 @@
 		var app = angular.module('myApp',[]).controller('myController', function($scope,$filter){
 			
 			$scope.environments = ["QA", "UAT", "ProdA"];
-			$scope.statuses = ["Pending", "In Progress", "Completed"];
+			$scope.statuses = ["Pending", "Assigned", "Completed"];
 			
 			$scope.selectedProblem =
 				{
