--- a/ProjectWorkSpace/PassiveDisplayWebservice/WebContent/index.html
+++ b/ProjectWorkSpace/PassiveDisplayWebservice/WebContent/index.html
@@ -6,7 +6,7 @@
 	<link href="/GoogleMaterials/CSS/material.light_green-green.min.css" rel="stylesheet" type="text/css"/>
 	<script src="/GoogleMaterials/JS/material.min.js"></script>
 	<script src="JS/angular.min.js"></script>
-  	<script src="JS/HalloWorldJS.js"></script> 
+  	<script src="JS/PassiveDisplay.js"></script> 
 </head>
 <body ng-app="environmentsApp">
 	<div class="mainDisplayArea" ng-controller="EnvironmentsController">
