--- a/ProjectWorkSpace/BAProblems/WebContent/index.html
+++ b/ProjectWorkSpace/BAProblems/WebContent/index.html
@@ -8,14 +8,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	
-	<script src="ng-flow/dist/ng-flow-standalone.min.js"></script>
-	
-	<script src="flow/src/flow.js"></script>
-	
 	<script src="angular.js"></script>
 	
 	<script type="text/javascript">
 		var app = angular.module('myApp',[]).controller('myController', function($scope,$filter){
+			
+			$scope.idSelectedRow = null;
+			$scope.setSelected = function (index) 
+				{
+   				$scope.idSelectedRow = index;
+				};
 			
 			$scope.environments = ["QA", "UAT", "ProdA"];
 			$scope.statuses = ["Pending", "Assigned", "Completed"];
@@ -152,7 +154,7 @@
             <tr>
                 <th>Select</th><th>Title</th><th>Date Created</th><th>Status</th>
             </tr>
-            <tr ng-repeat="problem in problems" ng-click="selectProblem(problem)">
+            <tr ng-repeat="problem in problems" ng-click="selectProblem(problem); setSelected($index)" ng-class="{selectedRow: $index == idSelectedRow}">
                 <td><input type=checkbox ng-model="checkbox" ng-change="useCheckbox(problem)"></td><td>{{ problem.title }}</td><td>{{ problem.date }}</td><td>{{problem.status}}</td>
             </tr>
         </table>
@@ -191,23 +193,6 @@
 			Environment:<select class="form-control" ng-model="problemToAdd.environment" ng-options="x for x in environments" required> </select>
 			
 			Image:
-			<div flow-init="{target: '/upload'}"
-     		flow-files-submitted="$flow.upload()"
-			flow-file-success="$file.msg = $message">
-
-  			<input type="file" flow-btn/> 
-				
-			
-			<span class="btn" flow-btn>Upload File</span>
-
-  			<table>
-				<tr ng-repeat="file in $flow.files">
-        			<td>{{$index+1}}</td>
-        			<td>{{file.name}}</td>
-        			<td>{{file.msg}}</td>
-    			</tr>
-  			</table>
-			</div>
 				
 			<br /> <br />
 			<button class="form-control" ng-click="add(problemToAdd)" data-dismiss="modal">Add</button>
