Added wildfly config file

--- a/ProjectWorkSpace/PassiveDisplayWebservice/WebContent/index.html
+++ b/ProjectWorkSpace/PassiveDisplayWebservice/WebContent/index.html
@@ -56,7 +56,7 @@
 		</div>
 		
 		<!-- RedMine environment grid -->
-		<div class="content-grid mdl-grid">
+	<!--	<div class="content-grid mdl-grid">
 			<div class="mdl-cell mdl-cell--12-col" ng-hide="getLength(redminList) != 0">
 			      <h3>No redmine issues found</h3>
 		    </div>
@@ -69,11 +69,10 @@
 					     <div class="mdl-card__supporting-text">
 					      <!--<p ng-show="environment.Building=='false'">{{environment.EstimatedDuration}}</p>
 					      <p ng-show="environment.Building=='true'">{{environment.Timestamp}}</p> --> 
-					    </div>
+			<!--		    </div>
 					</div>
 		    	</div>
-
-		</div>
+		</div>-->
 	
 	<!-- 	<ui:repeat var="problem" value="#{TestBean.problems}">
 				<div class="content-column mdl-cell mdl-cell--3-col">
